<resources>
    <string name="app_name">QTUM</string>
    <string name="create_new">Create New</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="create_the_first_one_or_restore_n_the_previous_wallet_key">Create the first one or restore \n the previous wallet key.</string>
    <string name="you_don_t_have_a_wallet_yet">You don\'t have a wallet, yet.</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="my_wallet">My Wallet</string>
    <string name="public_key">Public Key</string>
    <string name="qtum">QTUM</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="org.qtum.wallet.activity">Activity</string>
    <string name="receiver_s_address">Receiver\'s Address</string>
    <string name="amount">Amount</string>
    <string name="available_balance">"Available Balance"</string>
    <string name="copy_wallet_address">Copy Wallet Address</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter Name</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="news">News</string>
    <string name="create_pin">Create PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_fingerprint_or_pin">Confirm fingerprint or PIN</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="received_time">Received Time</string>
    <string name="transactionQTUM">Transaction</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="import_button">Import</string>
    <string name="language">Language</string>
    <string name="description">Description:</string>
    <string name="published_date">Published Date:</string>
    <string name="size">Size:</string>
    <string name="compiled_on">Compiled On:</string>
    <string name="source_code">Source Code:</string>
    <string name="published_by">Published By:</string>
    <string name="downloads">Downloads:</string>
    <string name="purchase">Purchase</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="tags">Tags:</string>
    <string name="qstore">Qstore</string>
    <string name="search_by_name">Search by Name</string>
    <string name="search_by_tag">Search by Hashtag</string>
    <string name="view_details">View Details</string>
    <string name="view_source_code">View Source Code</string>
    <string name="change_pin">Change PIN</string>
    <string name="export_passphrase">Export Passphrase</string>
    <string name="about">About</string>
    <string name="empty_name">Empty Name</string>
    <string name="incorrect_repeated_pin">Incorrect repeated PIN</string>
    <string name="your_brain_code">Your Passphrase</string>
    <string name="copy_brain_code">Copy Passphrase</string>
    <string name="copy_brain_code_n_to_use_it_in_another_app">Copy the passphrase to restore your wallet on another device</string>
    <string name="choose_another_address">Choose Another Address</string>
    <string name="log_out">Log Out</string>
    <string name="qr_code">QR Code</string>
    <string name="_continue">Continue</string>
    <string name="you_can_skip_this_step_and_export_your_brain_code_at_any_time_you_want">You can skip this step and export your passphrase at any time</string>
    <string name="copy">Copy</string>
    <string name="addresses">Addresses</string>
    <string name="subscribe_tokens">Token Subscriptions</string>
    <string name="next">Next</string>
    <string name="initial_supply">Initial Supply</string>
    <string name="decimal_units">Decimal Units</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="token_name">Token Name</string>
    <string name="mine_address">Mine Address</string>
    <string name="fee">FEE</string>
    <string name="currency">Currency</string>
    <string name="search">Search</string>
    <string name="chose_to_subscribe">Token Subscriptions</string>
    <string name="enter_pin_lower_case">enter pin</string>
    <string name="enter_new_pin">enter new pin</string>
    <string name="repeat_pin">repeat pin</string>
    <string name="enter_old_pin">enter old pin</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="skip">Skip</string>
    <string name="not_confirmed_balance">Unconfirmed Balance</string>
    <string name="templates">Templates</string>
    <string name="step_1_2">Step 1 of 2</string>
    <string name="step_2_2">Step 2 of 2</string>
    <string name="ok">OK</string>
    <string name="other_tokens">Other Tokens</string>
    <string name="token_address">Token Address</string>
    <string name="euclidFlexMedium" translatable="false">fonts/euclidflexmedium.ttf</string>
    <string name="simplonMonoMedium" translatable="false">fonts/simplonmonomedium.ttf</string>
    <string name="simplonMonoRegular" translatable="false">fonts/simplonmonoregular.ttf</string>
    <string name="avenir" translatable="false">fonts/avenir.ttc</string>
    <string name="proximaNovaBold" translatable="false">fonts/proximanovabold.ttf</string>
    <string name="proximaNovaLight" translatable="false">fonts/proximanovalight.ttf</string>
    <string name="proximaNovaRegular" translatable="false">fonts/proximanovaregular.ttf</string>
    <string name="proximaNovaSemibold" translatable="false">fonts/proximanovasemibold.ttf</string>
    <string name="retry">RETRY</string>
    <string name="smart_contracts">Smart Contracts</string>
    <string name="contracts_store">Contracts Store</string>
    <string name="call">Call</string>
    <string name="function_detail">Function Detail</string>
    <string name="contracts">Contracts</string>
    <string name="contract_address">Contract Address</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="watch_contract">Watch Contract</string>
    <string name="watch_token">Watch Token</string>
    <string name="restore_contracts">Restore Contracts</string>
    <string name="backup_contracts">Backup Contracts</string>
    <string name="select_back_up_file">Select backup file</string>
    <string name="please_wait_a_few_seconds">Please wait</string>
    <string name="payment_completed_successfully">Payment completed successfully</string>
    <string name="default_currency">(default currency)</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_network_settings">Please check your network settings</string>
    <string name="contract_created_successfully">Contract created successfully</string>
    <string name="restored_successfully">Restored successfully</string>
    <string name="login_to_qtum_using_touch_id">Login to QTUM\nusing Touch ID</string>
    <string name="touch_id">Touch ID</string>
    <string name="enable_touch_id">Enable touch id</string>
    <string name="not_now">Not now</string>
    <string name="login">Login</string>
    <string name="contract_name">Contract Name:</string>
    <string name="contract_type">Contract Type:</string>
    <string name="price">Price:</string>
    <string name="miner_address">Miner Address:</string>
    <string name="Fee">Fee:</string>
    <string name="Source_code">Source Code</string>
    <string name="store_categories">Qstore Categories</string>
    <string name="tap_to_save_the_file">Tap to save the file</string>
    <string name="my_new_contracts">My Contract Templates</string>
    <string name="my_published_contracts">My Published Contracts</string>
    <string name="not_confirmed_transaction">Unconfirmed Transaction</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="copy_to_share">Copy To Share</string>
    <string name="copy_address">Copy Address</string>
    <string name="copy_abi">Copy ABI</string>
    <string name="abi_interface">ABI Interface</string>
    <string name="token">Token</string>
    <string name="smart_contract_parameters">Smart Contract Parameters</string>
    <string name="switch_theme">Switch Application Theme</string>
    <string name="confirmation">Confirmation…</string>
    <string name="qtum_address">QTUM Address</string>
    <string name="not_confirmed_yet">Not Confirmed Yet…</string>
    <string name="confirmed">Confirmed</string>
    <string name="preview">Preview</string>
    <string name="restore">Restore</string>
    <string name="token_was_added_to_your_wallet">Token was added to your wallet</string>
    <string name="abi_doesnt_match_qrc20_standard">ABI doesn\'t match QRC20 standard</string>
    <string name="token_with_same_address_already_exists">Token with same address already exists</string>
    <string name="invalid_token_address">Invalid Token Address</string>
    <string name="address_list">Address List</string>
    <string name="transfer_balance">Transfer Balance</string>
    <string name="transfer">Transfer</string>
    <string name="enter_valid_amount_value">Enter valid Amount value</string>
    <string name="transaction_amount_cant_be_zero">Transaction amount can\'t be zero. Please edit your transaction and try again</string>
    <string name="address_book">Address Book</string>
    <string name="complete">Complete</string>
    <string name="address_manage">Manage Addresses</string>
    <string name="view_abi">View ABI</string>
    <string name="contract_management">Contract Management</string>
    <string name="contract_details">Contract Details</string>
    <string name="sent_time">Sent time</string>
    <string name="you_have_insufficient_funds_for_this_transaction">You have insufficient funds for this transaction</string>
    <string name="invalid_qtum_address">Invalid QTUM Address</string>
    <string name="fail_to_get_contract_methods">Fail to get contract methods</string>
    <string name="fail_to_get_contracts">Fail to get contracts</string>
    <string name="trending_now">Trending Now</string>
    <string name="whats_new">What\'s New?</string>
    <string name="error_qrcode_recognition_try_again">Error QR-code Recognition. Try Again</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="token_not_found">Token not found</string>
    <string name="copied">Copied</string>
    <string name="new_confirmed_transaction">New confirmed transaction</string>
    <string name="_2017_qtum_n_skynet_testnet_version">© 2017 QTUM \n </string>
    <string name="touch_to_open_transaction_history">Touch to open transaction history</string>
    <string name="functions">Functions</string>
    <string name="wallet_backup">Wallet Backup</string>
    <string name="news_placeholder">Please follow our Medium account to get latest news and updates:</string>
    <string name="news_placeholder_link">https://medium.com/@Qtum/</string>
    <string name="no_transaction_available_yet">No transactions available yet</string>
    <string name="_fee">Fee</string>
    <string name="invalid_fee">Invalid Fee</string>
    <string name="insufficient_fee_lease_use_minimum_of">Insufficient fee. Please use minimum of </string>
    <string name="no_tokens_found">No Tokens Found</string>
    <string name="no_contracts_found">No Contracts Found</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="receive_version_error">Receive version error</string>
    <string name="address">Address</string>
    <string name="hex">Hex</string>
    <string name="number">Number</string>
    <string name="text">Text</string>
</resources>