<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_wallet"
        android:icon="@drawable/ic_wallet_light"
        android:title="@string/wallet"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_profile_light"
        android:title="@string/profile"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/item_news"
        android:icon="@drawable/ic_news_light"
        android:title="@string/news"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/item_send"
        android:icon="@drawable/ic_send_light"
        android:title="@string/send"
        app:showAsAction="always|withText"/>
</menu>