<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.pixelplex.qtum.utils.FontTextView
            android:layout_width="match_parent"
            android:text="@string/confirm_purchase"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            app:typefaceAsset="@string/simplonMonoMedium"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            style="@style/confirm_purchase_title_dialog"
            android:layout_width="wrap_content"
            android:text="@string/contract_name"
            app:typefaceAsset="@string/euclidFlexMedium"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            android:id="@+id/contract_name"
            style="@style/confirm_purchase_subtitle_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Super Contract"
            app:typefaceAsset="@string/simplonMonoRegular" />

        <com.pixelplex.qtum.utils.FontTextView
            style="@style/confirm_purchase_title_dialog"
            android:layout_width="wrap_content"
            android:text="@string/contract_type"
            app:typefaceAsset="@string/euclidFlexMedium"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            android:id="@+id/contract_type"
            style="@style/confirm_purchase_subtitle_dialog"
            android:layout_width="wrap_content"
            android:text="Smart Contract"
            app:typefaceAsset="@string/simplonMonoRegular"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            style="@style/confirm_purchase_title_dialog"
            android:layout_width="wrap_content"
            android:text="@string/price"
            app:typefaceAsset="@string/euclidFlexMedium"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            android:id="@+id/price"
            style="@style/confirm_purchase_subtitle_dialog"
            android:layout_width="wrap_content"
            android:text="0.2 QTUM"
            app:typefaceAsset="@string/simplonMonoRegular"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            style="@style/confirm_purchase_title_dialog"
            android:layout_width="wrap_content"
            android:text="@string/miner_address"
            app:typefaceAsset="@string/euclidFlexMedium"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            android:id="@+id/miner_address"
            style="@style/confirm_purchase_subtitle_dialog"
            android:layout_width="wrap_content"
            android:text="sdflsj6357vpsf9vv8wx9vv9wm-v9w-ffxcvv"
            app:typefaceAsset="@string/simplonMonoRegular"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            style="@style/confirm_purchase_title_dialog"
            android:layout_width="wrap_content"
            android:text="@string/Fee"
            app:typefaceAsset="@string/euclidFlexMedium"
            android:layout_height="wrap_content" />

        <com.pixelplex.qtum.utils.FontTextView
            android:id="@+id/fee"
            style="@style/confirm_purchase_subtitle_dialog"
            android:layout_width="wrap_content"
            android:text="0.001 QTUM"
            app:typefaceAsset="@string/simplonMonoRegular"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.pixelplex.qtum.utils.FontButton
                android:id="@+id/btn_cancel"
                android:padding="16dp"
                app:typeface="@string/simplonMonoRegular"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.pixelplex.qtum.utils.FontButton
                android:id="@+id/btn_confirm"
                android:padding="16dp"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                app:typeface="@string/simplonMonoRegular"
                android:text="@string/confirm"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>