<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_progress_bar"
        android:orientation="vertical"
        android:padding="16dp">

        <com.pixelplex.qtum.utils.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:text="@string/copy_to_share"
            android:textSize="18sp"
            app:typefaceAsset="@string/proximaNovaSemibold" />

        <com.pixelplex.qtum.utils.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/contract_address"
            app:typefaceAsset="@string/proximaNovaRegular" />

        <com.pixelplex.qtum.utils.FontTextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:text="N/A"
            android:textSize="16sp"
            app:typefaceAsset="@string/proximaNovaSemibold" />

        <com.pixelplex.qtum.utils.FontButton
            app:typeface="@string/proximaNovaSemibold"
            android:id="@+id/copy_addr_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_sea_corner_background_light"
            android:paddingBottom="8dp"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:paddingTop="8dp"
            android:text="@string/copy_address"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.pixelplex.qtum.utils.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha=".5"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/abi_interface"
            app:typefaceAsset="@string/proximaNovaRegular" />

        <com.pixelplex.qtum.utils.FontTextView
            android:id="@+id/tv_abi"
            android:layout_width="match_parent"
            android:gravity="left"
            android:maxLines="8"
            android:padding="8dp"
            android:maxHeight="150dp"
            android:scrollbars="vertical"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_checkbox_empty_light"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:typefaceAsset="@string/proximaNovaLight" />

        <com.pixelplex.qtum.utils.FontButton
            app:typeface="@string/proximaNovaSemibold"
            android:id="@+id/copy_abi_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_sea_corner_background_light"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingEnd="48dp"
            android:paddingStart="48dp"
            android:paddingTop="8dp"
            android:text="@string/copy_abi"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

        <com.pixelplex.qtum.utils.FontButton
            android:drawableStart="@drawable/ic_popup_close"
            android:drawableTint="@color/grey"
            android:alpha=".5"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:typeface="@string/simplonMonoRegular" />
    </RelativeLayout>

</LinearLayout>