<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:clickable="true"
    android:background="@drawable/list_item_background_selector"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_alignTop="@+id/title"
        app:srcCompat="@drawable/ic_supertoken"
        android:tint="@color/colorPrimary"
        android:layout_width="20dp"
        android:layout_marginStart="16dp"
        android:layout_height="20dp" />

    <com.pixelplex.qtum.utils.FontTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        android:gravity="left|center_vertical"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:typefaceAsset="@string/simplonMonoRegular"
        android:textColor="@color/colorPrimary"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/icon"/>

    <com.pixelplex.qtum.utils.FontTextView
        android:layout_below="@+id/title"
        android:layout_marginTop="8dp"
        android:alpha=".6"
        android:layout_alignStart="@+id/title"
        android:id="@+id/cost"
        android:maxLines="1"
        android:scaleType="center"
        android:textSize="12sp"
        android:text="@string/qtum"
        android:textColor="@color/colorPrimary"
        app:typefaceAsset="@string/simplonMonoMedium"
        android:gravity="center"
        android:tint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"/>

</RelativeLayout>